@@ -7,6 +7,7 @@ UTIL:
 BUGFIX:
 * type=diff - JSON filter file - regression bug for "empty"
 * type=diff | bugfix for filter=jsonfile.json | not handling xpath split correctly
+* type=diff | bugfix filter JSON file "EMPTY" part
 
 GENERAL
 * update dockerfiles to adjust for github actions
